Fail on dereferencing error